dark mode fixed

--- a/src/style.css
+++ b/src/style.css
@@ -178,7 +178,7 @@ input:checked + .slider:before {
   background-image: linear-gradient(
     125deg,
     rgb(29, 28, 28),
-    #3c4746,
+    #47504f,
     rgb(34, 32, 32)
   );
   background-size: 100%;
